<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">WaitPerson</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select_table">Select Table</string>
    <string name="settings">Settings</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="add_diner">Add Diner</string>
    <string name="diner">Diner</string>
    <string name="take_order">Take Order</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="add_order_item">Add Order Item</string>
    <string name="add">Add</string>
    <string name="finalise_order">Finalise Order</string>
    <string name="back">Back</string>
    <string name="remove_diner">Remove Diner</string>
    <string android:id="@+id/string1" name="dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content">Warning</string>
    <string android:id="@+id/string1" name="alert_dialog_ok" android:layout_width="wrap_content" android:layout_height="wrap_content">OK</string>
    <string android:id="@+id/string1" name="alert_dialog_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content">Cancel</string>
    <string android:id="@+id/string1" name="clear_table" android:layout_width="wrap_content" android:layout_height="wrap_content">Clear Table</string>
    <string name="title_activity_view_tables">Available Tables</string>
    <string name="title_activity_add_tables">Add Tables</string>
    <string name="title_activity_edit_tables">Overwrite Tables</string>
    <string name="view_available_tables">View Available Tables</string>
    <string name="title_activity_android_notification">AndroidNotification</string>

</resources>
