<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jamie.ardis.waitperson.TableActivity" >

    <TextView
        android:id="@+id/tvTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />

    <Button
        android:id="@+id/btnAddDiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_diner" />

    <Spinner
        android:id="@+id/spDiners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/diner" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
       
   <!--  <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:onClick="returnInfo"
        android:layout_toRightOf="@+id/btnTakeOrder"
         /> -->
    
    <Button
        android:id="@+id/btnRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:onClick="removeDiner"
        android:text="@string/remove_diner" />

        <Button
            android:id="@+id/btnClearTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:onClick="clearTable"
            android:text="@string/clear_table" />
        
         <Button
             android:id="@+id/btnTakeOrder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/btnRemove"
             android:layout_marginTop="10dp"
             android:text="@string/take_order" />
  
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D1CFBE"
        android:padding="10dp" >
        
        <ListView
        android:id="@+id/lvOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </ListView>
        

    </FrameLayout>

</LinearLayout>
